--- a/api/package.json
+++ b/api/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "express": "^4.18.3",
     "mongoose": "^8.2.2",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "socket.io": "^4.7.5"
   }
 }
